--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
    ],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "name = \"Barthole\"#Your code here; update the variable name"
+    "name = \"Bartholomew S\"#Your code here; update the variable name"
    ]
   },
   {
